--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,6 +6,10 @@
   background-color: $white-color;
 }
 
+.footer__html-academy {
+  @include text-parameters (normal, normal , 14px, 26px, uppercase);
+}
+
 .footer__hashtag {
   @include text-parameters (normal, bold , 21px, 26px, uppercase);
   text-decoration: none;
