--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -14,6 +14,25 @@
     background-color: $background-dignity--folder;
     color: $black-color;
   }
+
+  &--real-town {
+    padding: 71px 13px 39px;
+  }
+}
+
+.advantages__item--real-town {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 320px;
+    height: 37px;
+    background-image: url("../img/bg-triangle.svg");
+    background-repeat: no-repeat;
+  }
 }
 
 .advantages__title {
@@ -40,8 +59,56 @@
   margin-bottom: 26px;
 }
 
-.dignity__item--hamburger {
+.advantages__dignity--housing {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -8px;
+    left: -45px;
+    width: 32px;
+    height: 38px;
+    mask-image: url("../img/icon-house.svg");
+    background-color: $background-dignity;
+    mask-repeat: no-repeat;
+    mask-size: contain;
+  }
+}
+
+.advantages__dignity--souvenirs {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -8px;
+    left: -45px;
+    width: 39px;
+    height: 36px;
+    mask-image: url("../img/icon-gift.svg");
+    background-color: $background-dignity;
+    mask-repeat: no-repeat;
+    mask-size: contain;
+  }
+}
+
+.advantages__dignity--hamburger {
+  position: relative;
   margin-bottom: 0;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -50px;
+    width: 40px;
+    height: 35px;
+    mask-image: url("../img/icon-burger.svg");
+    background-color: $background-dignity;
+    mask-repeat: no-repeat;
+    mask-size: contain;
+  }
 }
 
 .advantages__dignity-title {
@@ -136,7 +203,7 @@
 
 @media (min-width: $desktop-width) {
   .advantages__item--devil-bridge {
-    flex-grow: 1;
+    width: 100%;
   }
 
   .advantages--folded {
